5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4060/executions/1760_762.log
== TEST (2019-05-29 13:36:39) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
mes_numero=array(['01','02','03','04','05','06','07','08','09','10','11','12'])
v_crescente(arange(vet_mes, dtype=int))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:37:16) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
mes_numero=array(['01','02','03','04','05','06','07','08','09','10','11','12'])
v_crescente=arange(vet_mes, dtype=int)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:38:40) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
mes_numero=array(['01','02','03','04','05','06','07','08','09','10','11','12'])
v_crescente=arange((vet_mes), dtype=int)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:08:51) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
mes_numero=array([1,2,3,4,5,6,7,8,9,10,11,12])
v_crescente=arange((vet_mes), dtype=int)
cont=0
while(cont<size(mes_numero))
print(mes_numero)
-- ERROR:
File "XXXX", line 7
    while(cont<size(mes_numero))
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:09:00) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
mes_numero=array([1,2,3,4,5,6,7,8,9,10,11,12])
v_crescente=arange((vet_mes), dtype=int)
cont=0

print(mes_numero)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:09:16) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
mes_numero=array([1,2,3,4,5,6,7,8,9,10,11,12])

cont=0

print(mes_numero)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:09:38) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
mes_numero=array([1,2,3,4,5,6,7,8,9,10,11,12])

cont=0

print(size(mes_numero))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:21:59) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
mes_numero=array([1,2,3,4,5,6,7,8,9,10,11,12])
ddmmaaaa=input(" ")
cont=0
while(cont<size(mes_numero))
	if(ddmmaaaa[2:4]=='01'):
		print('janeiro')
		


-- ERROR:
File "XXXX", line 7
    while(cont<size(mes_numero))
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:22:33) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
mes_numero=array([1,2,3,4,5,6,7,8,9,10,11,12])
ddmmaaaa=input(" ")
cont=0
while(cont<size(mes_numero))
	if(ddmmaaaa[2:4]=='01'):
		print('janeiro')
	cont=cont+1	
		


-- ERROR:
File "XXXX", line 7
    while(cont<size(mes_numero))
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:23:01) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
mes_numero=array([1,2,3,4,5,6,7,8,9,10,11,12])
ddmmaaaa=input(" ")
cont=0
while(cont<size(mes_numero)):
	if(ddmmaaaa[2:4]=='01'):
		print('janeiro')
	cont=cont+1	
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:29:36) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
mes_numero=array([1,2,3,4,5,6,7,8,9,10,11,12])
ddmmaaaa=input(" ")
cont=0
while(cont<size(mes_numero)):
	if(ddmmaaaa[2:4]=='01'):
		print(vet_mes[cont])
	elif	
	cont=cont+1	
		


-- ERROR:
File "XXXX", line 10
    elif	
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:29:45) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
mes_numero=array([1,2,3,4,5,6,7,8,9,10,11,12])
ddmmaaaa=input(" ")
cont=0
while(cont<size(mes_numero)):
	if(ddmmaaaa[2:4]=='01'):
		print(vet_mes[cont])	
	cont=cont+1	
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:30:43) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
mes_numero=array([1,2,3,4,5,6,7,8,9,10,11,12])
ddmmaaaa=input(" ")
cont=0
while(cont<size(mes_numero)):
	if(ddmmaaaa[2:4]=='01'):
		print(vet_mes[1])	
	cont=cont+1	
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:31:58) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
mes_numero=array([1,2,3,4,5,6,7,8,9,10,11,12])
ddmmaaaa=input(" ")
cont=0
while(cont<len(vet_mes)):
	if(ddmmaaaa[2:4]=='01'):
		print(vet_mes[0])	
	cont=cont+1	
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:33:34) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
mes_numero=array([1,2,3,4,5,6,7,8,9,10,11,12])
ddmmaaaa=input(" ")
cont=0
while(cont<len(vet_mes)):
	if(ddmmaaaa[2:4]=='01'):
		mm=(vet_mes[0])	
	cont=cont+1	
print(mm)			


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:35:24) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
mes_numero=array([1,2,3,4,5,6,7,8,9,10,11,12])
ddmmaaaa=input(" ")
cont=0
while(cont<len(vet_mes)):
	if(ddmmaaaa[2:4]=='01'):
		mm=(vet_mes[cont])
	elif	
	cont=cont+1	
print(mm)			


-- ERROR:
File "XXXX", line 10
    elif	
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:35:37) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
mes_numero=array([1,2,3,4,5,6,7,8,9,10,11,12])
ddmmaaaa=input(" ")
cont=0
while(cont<len(vet_mes)):
	if(ddmmaaaa[2:4]=='01'):
		mm=(vet_mes[cont])
	
	cont=cont+1	
print(mm)			


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:37:18) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
mes_numero=array([1,2,3,4,5,6,7,8,9,10,11,12])
ddmmaaaa=input(" ")
cont=0
while(cont<len(vet_mes)):
	if(ddmmaaaa[2:4]=='01'):
		mm=(vet_mes[cont])
	
	cont=cont+1	
print(mm)			


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:39:42) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
mes_numero=array([1,2,3,4,5,6,7,8,9,10,11,12])
ddmmaaaa=input(" ")
cont=0
while(cont<len(vet_mes)):
	if(ddmmaaaa[2:4]=='01'):
		mm=(vet_mes[cont])
	elif(ddmmaaaa[2:4]=='02'):
		mm=(vet_mes[cont])
	cont=cont+1	
print(mm)			


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:40:35) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
mes_numero=array([1,2,3,4,5,6,7,8,9,10,11,12])
ddmmaaaa=input(" ")
cont=0
while(cont<len(vet_mes)):
	if(ddmmaaaa[2:4]=='01'):
		mm=(vet_mes[1])
	elif(ddmmaaaa[2:4]=='02'):
		mm=(vet_mes[2])
	cont=cont+1	
print(mm)			


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:40:54) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
mes_numero=array([1,2,3,4,5,6,7,8,9,10,11,12])
ddmmaaaa=input(" ")
cont=0
while(cont<len(vet_mes)):
	if(ddmmaaaa[2:4]=='01'):
		mm=(vet_mes[0])
	elif(ddmmaaaa[2:4]=='02'):
		mm=(vet_mes[1])
	cont=cont+1	
print(mm)			


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:43:24) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
mes_numero=array([1,2,3,4,5,6,7,8,9,10,11,12])
ddmmaaaa=input(" ")
cont=0
cont_1=0
while(cont<len(vet_mes)):
	if(ddmmaaaa[2:4]=='01'):
		mm=(vet_mes[cont_1])
	elif(ddmmaaaa[2:4]=='02'):
		mm=(vet_mes[cont_1])
	cont=cont+1
	cont_1=cont_1+1
	
print(mm)			


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:46:01) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
mes_numero=array([1,2,3,4,5,6,7,8,9,10,11,12])
ddmmaaaa=input(" ")
cont=0
cont_1=0
if(ddmmaaaa[2:4]=='01'):
	mm=(vet_mes[0])
elif(ddmmaaaa[2:4]=='02'):
	mm=(vet_mes[1])
	

print(mm)			


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:49:00) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
mes_numero=array([1,2,3,4,5,6,7,8,9,10,11,12])
ddmmaaaa=input(" ")
cont=0
cont_1=0
if(ddmmaaaa[2:4]=='01'):
	mm=(vet_mes[ddmmaaaa])
elif(ddmmaaaa[2:4]=='02'):
	mm=(vet_mes[1])
elif(ddmmaaaa[2:4]=='01'):
	mm=(vet_mes[2])	

print(mm)			


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:49:14) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
mes_numero=array([1,2,3,4,5,6,7,8,9,10,11,12])
ddmmaaaa=input(" ")
cont=0
cont_1=0
if(ddmmaaaa[2:4]=='01'):
	mm=(vet_mes[ddmmaaaa])
elif(ddmmaaaa[2:4]=='02'):
	mm=(vet_mes[1])
elif(ddmmaaaa[2:4]=='01'):
	mm=(vet_mes[2])	

print(mm)			


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:54:52) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
mes_numero=array([1,2,3,4,5,6,7,8,9,10,11,12])
ddmmaaaa=input(" ")
cont=0
cont_1=0
if(ddmmaaaa[2:4]=='01'):
	mm=(vet_mes[0])
elif(ddmmaaaa[2:4]=='02'):
	mm=(vet_mes[1])
elif(ddmmaaaa[2:4]=='03'):
	mm=(vet_mes[2])
elif(ddmmaaaa[2:4]=='04'):
	mm=(vet_mes[3])
elif(ddmmaaaa[2:4]=='05'):
	mm=(vet_mes[4])
elif(ddmmaaaa[2:4]=='06'):
	mm=(vet_mes[5])
elif(ddmmaaaa[2:4]=='07'):
	mm=(vet_mes[6])
elif(ddmmaaaa[2:4]=='08'):
	mm=(vet_mes[7])
elif(ddmmaaaa[2:4]=='09'):
	mm=(vet_mes[8])
elif(ddmmaaaa[2:4]=='10'):
	mm=(vet_mes[9])
elif(ddmmaaaa[2:4]=='11'):
	mm=(vet_mes[10])
elif(ddmmaaaa[2:4]=='12'):
	mm=(vet_mes[11])	
	
	

print(mm)			


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:57:21) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
mes_numero=array([1,2,3,4,5,6,7,8,9,10,11,12])
ddmmaaaa=input(" ")
cont=0
cont_1=0
if(ddmmaaaa[2:4]=='01'):
	mm=(vet_mes[0])
elif(ddmmaaaa[2:4]=='02'):
	mm=(vet_mes[1])
elif(ddmmaaaa[2:4]=='03'):
	mm=(vet_mes[2])
elif(ddmmaaaa[2:4]=='04'):
	mm=(vet_mes[3])
elif(ddmmaaaa[2:4]=='05'):
	mm=(vet_mes[4])
elif(ddmmaaaa[2:4]=='06'):
	mm=(vet_mes[5])
elif(ddmmaaaa[2:4]=='07'):
	mm=(vet_mes[6])
elif(ddmmaaaa[2:4]=='08'):
	mm=(vet_mes[7])
elif(ddmmaaaa[2:4]=='09'):
	mm=(vet_mes[8])
elif(ddmmaaaa[2:4]=='10'):
	mm=(vet_mes[9])
elif(ddmmaaaa[2:4]=='11'):
	mm=(vet_mes[10])
elif(ddmmaaaa[2:4]=='12'):
	mm=(vet_mes[11])	
print(ddmmaaaa[0:2] + mm)			


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:58:04) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
mes_numero=array([1,2,3,4,5,6,7,8,9,10,11,12])
ddmmaaaa=input(" ")
cont=0
cont_1=0
if(ddmmaaaa[2:4]=='01'):
	mm=(vet_mes[0])
elif(ddmmaaaa[2:4]=='02'):
	mm=(vet_mes[1])
elif(ddmmaaaa[2:4]=='03'):
	mm=(vet_mes[2])
elif(ddmmaaaa[2:4]=='04'):
	mm=(vet_mes[3])
elif(ddmmaaaa[2:4]=='05'):
	mm=(vet_mes[4])
elif(ddmmaaaa[2:4]=='06'):
	mm=(vet_mes[5])
elif(ddmmaaaa[2:4]=='07'):
	mm=(vet_mes[6])
elif(ddmmaaaa[2:4]=='08'):
	mm=(vet_mes[7])
elif(ddmmaaaa[2:4]=='09'):
	mm=(vet_mes[8])
elif(ddmmaaaa[2:4]=='10'):
	mm=(vet_mes[9])
elif(ddmmaaaa[2:4]=='11'):
	mm=(vet_mes[10])
elif(ddmmaaaa[2:4]=='12'):
	mm=(vet_mes[11])	
print(ddmmaaaa[0:2] + 'de' + mm)			


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:58:50) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
mes_numero=array([1,2,3,4,5,6,7,8,9,10,11,12])
ddmmaaaa=input(" ")
cont=0
cont_1=0
if(ddmmaaaa[2:4]=='01'):
	mm=(vet_mes[0])
elif(ddmmaaaa[2:4]=='02'):
	mm=(vet_mes[1])
elif(ddmmaaaa[2:4]=='03'):
	mm=(vet_mes[2])
elif(ddmmaaaa[2:4]=='04'):
	mm=(vet_mes[3])
elif(ddmmaaaa[2:4]=='05'):
	mm=(vet_mes[4])
elif(ddmmaaaa[2:4]=='06'):
	mm=(vet_mes[5])
elif(ddmmaaaa[2:4]=='07'):
	mm=(vet_mes[6])
elif(ddmmaaaa[2:4]=='08'):
	mm=(vet_mes[7])
elif(ddmmaaaa[2:4]=='09'):
	mm=(vet_mes[8])
elif(ddmmaaaa[2:4]=='10'):
	mm=(vet_mes[9])
elif(ddmmaaaa[2:4]=='11'):
	mm=(vet_mes[10])
elif(ddmmaaaa[2:4]=='12'):
	mm=(vet_mes[11])	
print(ddmmaaaa[0:2], 'de',mm)			


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:00:02) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
mes_numero=array([1,2,3,4,5,6,7,8,9,10,11,12])
ddmmaaaa=input(" ")
cont=0
cont_1=0
if(ddmmaaaa[2:4]=='01'):
	mm=(vet_mes[0])
elif(ddmmaaaa[2:4]=='02'):
	mm=(vet_mes[1])
elif(ddmmaaaa[2:4]=='03'):
	mm=(vet_mes[2])
elif(ddmmaaaa[2:4]=='04'):
	mm=(vet_mes[3])
elif(ddmmaaaa[2:4]=='05'):
	mm=(vet_mes[4])
elif(ddmmaaaa[2:4]=='06'):
	mm=(vet_mes[5])
elif(ddmmaaaa[2:4]=='07'):
	mm=(vet_mes[6])
elif(ddmmaaaa[2:4]=='08'):
	mm=(vet_mes[7])
elif(ddmmaaaa[2:4]=='09'):
	mm=(vet_mes[8])
elif(ddmmaaaa[2:4]=='10'):
	mm=(vet_mes[9])
elif(ddmmaaaa[2:4]=='11'):
	mm=(vet_mes[10])
elif(ddmmaaaa[2:4]=='12'):
	mm=(vet_mes[11])	
print(ddmmaaaa[0:2], 'de',mm, ddmmaaaa[4:8] )			


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:00:20) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
mes_numero=array([1,2,3,4,5,6,7,8,9,10,11,12])
ddmmaaaa=input(" ")
cont=0
cont_1=0
if(ddmmaaaa[2:4]=='01'):
	mm=(vet_mes[0])
elif(ddmmaaaa[2:4]=='02'):
	mm=(vet_mes[1])
elif(ddmmaaaa[2:4]=='03'):
	mm=(vet_mes[2])
elif(ddmmaaaa[2:4]=='04'):
	mm=(vet_mes[3])
elif(ddmmaaaa[2:4]=='05'):
	mm=(vet_mes[4])
elif(ddmmaaaa[2:4]=='06'):
	mm=(vet_mes[5])
elif(ddmmaaaa[2:4]=='07'):
	mm=(vet_mes[6])
elif(ddmmaaaa[2:4]=='08'):
	mm=(vet_mes[7])
elif(ddmmaaaa[2:4]=='09'):
	mm=(vet_mes[8])
elif(ddmmaaaa[2:4]=='10'):
	mm=(vet_mes[9])
elif(ddmmaaaa[2:4]=='11'):
	mm=(vet_mes[10])
elif(ddmmaaaa[2:4]=='12'):
	mm=(vet_mes[11])	
print(ddmmaaaa[0:2], 'de',mm, 'de' ddmmaaaa[4:8] )			


-- ERROR:
File "XXXX", line 32
    print(ddmmaaaa[0:2], 'de',mm, 'de' ddmmaaaa[4:8] )			
                                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:00:27) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
mes_numero=array([1,2,3,4,5,6,7,8,9,10,11,12])
ddmmaaaa=input(" ")
cont=0
cont_1=0
if(ddmmaaaa[2:4]=='01'):
	mm=(vet_mes[0])
elif(ddmmaaaa[2:4]=='02'):
	mm=(vet_mes[1])
elif(ddmmaaaa[2:4]=='03'):
	mm=(vet_mes[2])
elif(ddmmaaaa[2:4]=='04'):
	mm=(vet_mes[3])
elif(ddmmaaaa[2:4]=='05'):
	mm=(vet_mes[4])
elif(ddmmaaaa[2:4]=='06'):
	mm=(vet_mes[5])
elif(ddmmaaaa[2:4]=='07'):
	mm=(vet_mes[6])
elif(ddmmaaaa[2:4]=='08'):
	mm=(vet_mes[7])
elif(ddmmaaaa[2:4]=='09'):
	mm=(vet_mes[8])
elif(ddmmaaaa[2:4]=='10'):
	mm=(vet_mes[9])
elif(ddmmaaaa[2:4]=='11'):
	mm=(vet_mes[10])
elif(ddmmaaaa[2:4]=='12'):
	mm=(vet_mes[11])	
print(ddmmaaaa[0:2], 'de',mm, 'de' ,ddmmaaaa[4:8] )			


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 15:00:37) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
mes_numero=array([1,2,3,4,5,6,7,8,9,10,11,12])
ddmmaaaa=input(" ")
cont=0
cont_1=0
if(ddmmaaaa[2:4]=='01'):
	mm=(vet_mes[0])
elif(ddmmaaaa[2:4]=='02'):
	mm=(vet_mes[1])
elif(ddmmaaaa[2:4]=='03'):
	mm=(vet_mes[2])
elif(ddmmaaaa[2:4]=='04'):
	mm=(vet_mes[3])
elif(ddmmaaaa[2:4]=='05'):
	mm=(vet_mes[4])
elif(ddmmaaaa[2:4]=='06'):
	mm=(vet_mes[5])
elif(ddmmaaaa[2:4]=='07'):
	mm=(vet_mes[6])
elif(ddmmaaaa[2:4]=='08'):
	mm=(vet_mes[7])
elif(ddmmaaaa[2:4]=='09'):
	mm=(vet_mes[8])
elif(ddmmaaaa[2:4]=='10'):
	mm=(vet_mes[9])
elif(ddmmaaaa[2:4]=='11'):
	mm=(vet_mes[10])
elif(ddmmaaaa[2:4]=='12'):
	mm=(vet_mes[11])	
print(ddmmaaaa[0:2], 'de',mm, 'de' ,ddmmaaaa[4:8] )			


-- EXECUTION TIME:
0.459251
-- TEST CASE 1:
---- input:
26111982
---- correct output:
26 de novembro de 1982
---- user output:
26 de novembro de 1982
-- TEST CASE 2:
---- input:
07071854
---- correct output:
07 de julho de 1854
---- user output:
07 de julho de 1854
-- TEST CASE 3:
---- input:
22082000
---- correct output:
22 de agosto de 2000
---- user output:
22 de agosto de 2000
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
